--- a/gpt2.ipynb
+++ b/gpt2.ipynb
@@ -4,14 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[comment]: <> \"LTeX: language=fr\"\n",
     "# <center>Dissection d'un transformer</center>\n",
     "## <center>Jean-Philippe Magué, IXXI</center>\n",
     "### <center>21 juin 2024</center>"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[comment]: <> \"LTeX: language=fr\"\n",
+    "Ce notebook propose une vision de \"haut niveau\" du fonctionnement du modèle [GPT2](https://huggingface.co/docs/transformers/en/model_doc/gpt2), c'est-à-dire en regardant les entrées et les sorties, mais sans rentrer dans le fonctionnement interne. \n",
+    "\n",
+    "Il utilise la bibliothèque [transformers](https://huggingface.co/docs/transformers/en/index) de [HuggingFace](https://huggingface.co/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Initialisation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,22 +41,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch.autograd.grad_mode.set_grad_enabled at 0x28595e580>"
+       "<torch.autograd.grad_mode.set_grad_enabled at 0x17a1b2f40>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.set_grad_enabled(False)"
+    "torch.set_grad_enabled(False) #no training today!"
    ]
   },
   {
@@ -74,12 +92,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Génération de texte"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "prompt = 'the cat sat on the'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](img/tokenization/tokenization.001.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tokenisation"
    ]
   },
   {
