--- a/gpt2.ipynb
+++ b/gpt2.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch.autograd.grad_mode.set_grad_enabled at 0x17a1b2f40>"
+       "<torch.autograd.grad_mode.set_grad_enabled at 0x17e7424c0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "device(type='mps', index=0)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,39 +100,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = 'the cat sat on the'"
+    "prompt = 'Artificial intelligence'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](img/tokenization/tokenization.001.png)"
+    "<img src=\"img/tokenization/tokenization.001.png\" width=\"600\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tokenisation"
+    "[comment]: <> \"LTeX: language=fr\"\n",
+    "## Tokenisation\n",
+    "Les modèles de langue ne traitent pas directement des chaînes de caractères. Celles-ci sont *tokenisées* et ce sont les tokens qui consituent les unités traitées par ces modèles. La liste de ces tokens est finie (il y en a 50257 pour GPT2) et ils sont définis avant même l'entraîment du modèle. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'input_ids': tensor([[1169, 3797, 3332,  319,  262]], device='mps:0'), 'attention_mask': tensor([[1, 1, 1, 1, 1]], device='mps:0')}"
+       "{'input_ids': tensor([[8001, 9542, 4430]], device='mps:0'), 'attention_mask': tensor([[1, 1, 1]], device='mps:0')}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,29 +146,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|the| -> 1169\n",
-      "| cat| -> 3797\n",
-      "| sat| -> 3332\n",
-      "| on| -> 319\n",
-      "| the| -> 262\n"
+      "|token|  -> id\n",
+      "\n",
+      "|Art|    -> 8001\n",
+      "|ificial| -> 9542\n",
+      "| intelligence| -> 4430\n"
      ]
     }
    ],
    "source": [
+    "print(f'{\"|token|\":8} -> id\\n')\n",
     "for token in input['input_ids'][0]:\n",
-    "    print(f'|{tokenizer.decode(token)}| -> {token}')"
+    "    print(f'{\"|\"+tokenizer.decode(token)+\"|\":8} -> {token}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/tokenization/tokenization.002.png\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Génération"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,16 +192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[1169, 3797, 3332,  319,  262, 4314]], device='mps:0')"
+       "tensor([[8001, 9542, 4430,  318]], device='mps:0')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,31 +211,161 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[comment]: <> \"LTeX: language=fr\"\n",
+    "Le modèle renvoie également une liste (d'identifiants) de tokens : ceux donnés en entrée plus celui généré. Le tokenizer permet de les décoder."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1169 -> |the|\n",
-      "3797 -> | cat|\n",
-      "3332 -> | sat|\n",
-      "319 -> | on|\n",
-      "262 -> | the|\n",
-      "4314 -> | floor|\n"
+      "|token|  -> id\n",
+      "\n",
+      "|Art|    -> 8001\n",
+      "|ificial| -> 9542\n",
+      "| intelligence| -> 4430\n",
+      "| is|    -> 318\n"
      ]
     }
    ],
    "source": [
+    "print(f'{\"|token|\":8} -> id\\n')\n",
     "for token in output[0]:\n",
-    "    print(f'{token} -> |{tokenizer.decode(token)}|')"
+    "    print(f'{\"|\"+tokenizer.decode(token)+\"|\":8} -> {token}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/tokenization/tokenization.003.png\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si l'on souhaite générer plus de 1 token, il suffit de répéter l'opération:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Artificial intelligence is a'"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output2 = gpt2.generate(input_ids=output, attention_mask=torch.ones(output.shape).to(device), max_new_tokens=1)\n",
+    "tokenizer.decode(output2[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/tokenization/tokenization.004.png\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Artificial intelligence is a new'"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output3 = gpt2.generate(input_ids=output2, attention_mask=torch.ones(output2.shape).to(device), max_new_tokens=1)\n",
+    "tokenizer.decode(output3[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Artificial intelligence is a new field'"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output4 = gpt2.generate(input_ids=output3, attention_mask=torch.ones(output3.shape).to(device), max_new_tokens=1)\n",
+    "tokenizer.decode(output4[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ou alors, plus simplement : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Artificial intelligence is a new field of research'"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output10 = gpt2.generate(input_ids=input['input_ids'], attention_mask=input['attention_mask'], max_new_tokens=6)\n",
+    "tokenizer.decode(output10[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[comment]: <> \"LTeX: language=fr\"\n",
+    "## Stratégies de génération de texte\n",
+    "Ce que calcule le modèle est en fait un score associé à chacun des 50257 tokens à partir duquel il est possible de dériver une distribution de probabilité sur les tokens. Le choix du token qui sera généré est effectué à partir de ces probabilités, et [plusieurs stratégies sont possibles](https://huggingface.co/blog/how-to-generate). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,17 +374,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[-93.6302, -91.2279, -95.6219,  ..., -95.8761, -95.7496, -93.2641]],\n",
-       "        device='mps:0'),)"
+       "(tensor([[ -99.0574,  -97.3374, -104.6698,  ..., -105.8733, -106.3210,\n",
+       "           -99.8503]], device='mps:0'),)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,55 +394,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[comment]: <> \"LTeX: language=fr\"\n",
+    "Ces scores sont transformés en probabilités via une fonction [softmax](https://stackoverflow.com/a/47763299/1731620) :\n",
+    "\n",
+    "$\\sigma(x_i)=\\frac{e^{x_i}}{\\sum{e^{x_j}}}$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scores = output['scores'][0].cpu().detach().numpy()"
+    "prob = torch.nn.functional.softmax(output['scores'][0],dim=1)\n",
+    "prob_of_each_token = list(zip([tokenizer.decode(i) for i in range(50257)], prob.cpu().detach().numpy()[0]))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Score des 10 premiers tokens"
+    "[comment]: <> \"LTeX: language=fr\"\n",
+    "On peut regarder quels sont les 10 tokens avec la plus haute probabilité"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|!| -> -93.6302\n",
-      "|\"| -> -91.2279\n",
-      "|#| -> -95.6219\n",
-      "|$| -> -96.1859\n",
-      "|%| -> -95.5137\n",
-      "|&| -> -96.0170\n",
-      "|'| -> -92.7750\n",
-      "|(| -> -92.5709\n",
-      "|)| -> -90.8867\n",
-      "|*| -> -93.0254\n"
+      "|token|   -> score\n",
+      "\n",
+      "| is|     -> 0.1954\n",
+      "| (|      -> 0.0700\n",
+      "|,|       -> 0.0597\n",
+      "| has|    -> 0.0580\n",
+      "| and|    -> 0.0462\n",
+      "| will|   -> 0.0447\n",
+      "| can|    -> 0.0371\n",
+      "| could|  -> 0.0173\n",
+      "|.|       -> 0.0166\n",
+      "| may|    -> 0.0135\n"
      ]
     }
    ],
    "source": [
-    "for i in range(10):\n",
-    "    print(f'|{tokenizer.decode(i)}| -> {scores[0,i]:.4f}')"
+    "print(f'{\"|token|\":9} -> score\\n')\n",
+    "for token, score in sorted(prob_of_each_token, key=lambda x: x[1], reverse=True)[:10]:\n",
+    "    print(f'{\"|\"+token+\"|\":9} -> {score:.4f}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On peut transformer ces scores en probabilités via une fonction softmax :\n",
+    "### Greedy search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[comment]: <> \"LTeX: language=fr\"\n",
+    "La stratégie par défaut employée ici, *greedy search*, consiste tout simplement à choisir à chaque étape le token ayant la plus grande probabilité :\n",
     "\n",
-    "$\\sigma(x_i)=\\frac{e^{x_i}}{\\sum{e^{x_j}}}$"
+    "\n",
+    "<img src=\"img/tokenization/tokenization.005.png\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Beam search"
    ]
   },
   {
@@ -391,98 +569,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jmague/mambaforge/envs/formation_LLM/lib/python3.9/site-packages/transformers/utils/generic.py:311: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
-      "  torch.utils._pytree._register_pytree_node(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pipe = pipeline(model=model_name, device_map='auto')"
+    "prompt = 'Artificial intelligence'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prompt = \"Hi language model, how are you\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'generated_text': \"Hi language model, how are you going to get it?\\n\\nCurtis Molyneux: Well, we really have a very specific language model where you will want to use three types of code, that's what we're building for\"}]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pipe(prompt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "device=model.device"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'input_ids': [1169, 3797, 3332, 319, 262], 'attention_mask': [1, 1, 1, 1, 1]}"
+       "{'input_ids': tensor([[8001, 9542, 4430]], device='mps:0'), 'attention_mask': tensor([[1, 1, 1]], device='mps:0')}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "input = tokenizer(prompt, return_tensors=\"pt\").to(device)\n",
+    "input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Artificial intelligence is a new\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = gpt2.generate(input_ids=input['input_ids'], attention_mask=input['attention_mask'], max_new_tokens=3)\n",
+    "print(tokenizer.decode(output[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Artificial intelligence (AI)'"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = gpt2.generate(input_ids=input['input_ids'], attention_mask=input['attention_mask'], max_new_tokens=3, num_beams = 2)\n",
+    "tokenizer.decode(output[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = 'Artificial intelligence is'\n",
+    "input = tokenizer(prompt, return_tensors=\"pt\").to(device)\n",
+    "output = gpt2.generate(input_ids=input['input_ids'], attention_mask=input['attention_mask'], max_new_tokens=1,return_dict_in_generate=True, output_scores=True, num_beams = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prob = torch.nn.functional.softmax(output['scores'][0],dim=1).cpu().detach().numpy()[0]\n",
+    "prob_of_each_token = list(zip([tokenizer.decode(i) for i in range(50257)], prob))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|token|   -> score\n",
+      "\n",
+      "| a|      -> 0.1204\n",
+      "| the|    -> 0.0525\n",
+      "| not|    -> 0.0432\n",
+      "| an|     -> 0.0309\n",
+      "| now|    -> 0.0206\n",
+      "| one|    -> 0.0189\n",
+      "| also|   -> 0.0188\n",
+      "| already| -> 0.0172\n",
+      "| becoming| -> 0.0161\n",
+      "| just|   -> 0.0142\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'{\"|token|\":9} -> score\\n')\n",
+    "for token, score in sorted(prob_of_each_token, key=lambda x: x[1], reverse=True)[:10]:\n",
+    "    print(f'{\"|\"+token+\"|\":9} -> {score:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 8001,  9542,  4430,   357, 20185,     8],\n",
+       "        [ 8001,  9542,  4430,   357, 20185,   828]], device='mps:0')"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output['sequences']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Artificial intelligence (AI)'"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.decode(output['sequences'][0])"
+   ]
   },
   {
    "cell_type": "code",
