--- a/gpt2.ipynb
+++ b/gpt2.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch.autograd.grad_mode.set_grad_enabled at 0x17e7424c0>"
+       "<torch.autograd.grad_mode.set_grad_enabled at 0x16840f0a0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "device(type='mps', index=0)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,12 +120,12 @@
    "source": [
     "[comment]: <> \"LTeX: language=fr\"\n",
     "## Tokenisation\n",
-    "Les modèles de langue ne traitent pas directement des chaînes de caractères. Celles-ci sont *tokenisées* et ce sont les tokens qui consituent les unités traitées par ces modèles. La liste de ces tokens est finie (il y en a 50257 pour GPT2) et ils sont définis avant même l'entraîment du modèle. "
+    "Les modèles de langue ne traitent pas directement des chaînes de caractères. Celles-ci sont **tokenisées** et ce sont les tokens qui consituent les unités traitées par ces modèles. La liste de ces tokens est finie (il y en a 50257 pour GPT2) et ils sont définis avant même l'entraîment du modèle. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "{'input_ids': tensor([[8001, 9542, 4430]], device='mps:0'), 'attention_mask': tensor([[1, 1, 1]], device='mps:0')}"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "tensor([[8001, 9542, 4430,  318]], device='mps:0')"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "'Artificial intelligence is a'"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "'Artificial intelligence is a new'"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "'Artificial intelligence is a new field'"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "'Artificial intelligence is a new field of research'"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,12 +360,12 @@
    "source": [
     "[comment]: <> \"LTeX: language=fr\"\n",
     "## Stratégies de génération de texte\n",
-    "Ce que calcule le modèle est en fait un score associé à chacun des 50257 tokens à partir duquel il est possible de dériver une distribution de probabilité sur les tokens. Le choix du token qui sera généré est effectué à partir de ces probabilités, et [plusieurs stratégies sont possibles](https://huggingface.co/blog/how-to-generate). "
+    "Ce que calcule le modèle est en fait un score associé à chacun des 50257 tokens à partir duquel il est possible de dériver une distribution de probabilité sur les tokens. Le choix du token qui sera généré est effectué à partir de ces scores/probabilités. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "           -99.8503]], device='mps:0'),)"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -463,66 +463,140 @@
    "metadata": {},
    "source": [
     "[comment]: <> \"LTeX: language=fr\"\n",
-    "La stratégie par défaut employée ici, *greedy search*, consiste tout simplement à choisir à chaque étape le token ayant la plus grande probabilité :\n",
+    "[Différentes stratégies sont possibles](https://huggingface.co/blog/how-to-generate) pour générer le prochain token. La stratégie par défaut employée ici, **greedy search**, consiste tout simplement à choisir à chaque étape le token ayant la plus grande probabilité :\n",
     "\n",
     "\n",
-    "<img src=\"img/tokenization/tokenization.005.png\" width=\"600\">"
+    "<img src=\"img/tokenization/tokenization.005.png\" width=\"600\">\n",
+    "\n",
+    "Elle atteint assez vite ses limites : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Artificial intelligence is a new field of research that has been in the works for a while now. It is a field that has been in the works for a while now. It is a field that has been in the works for a while now. It is a'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = gpt2.generate(input_ids=input['input_ids'], attention_mask=input['attention_mask'], max_new_tokens=50)\n",
+    "tokenizer.decode(output[0])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Beam search"
+    "[comment]: <> \"LTeX: language=fr\"\n",
+    "### Un peu de stochasticité\n",
+    "On peut être moins détermistes et profiter de la distribution de probabilité pour introduire de l'aléatoire :\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1.9344670e-07, 2.1372703e-06, 2.6397579e-08, ..., 2.0473150e-08,\n",
-       "       2.3234190e-08, 2.7896203e-07], dtype=float32)"
+       "'Artificial intelligence has already emerged as one of the most complex fields in recent years, with hundreds of different systems competing for supremacy in online space.\\n\\nBut some have suggested that artificial intelligence may be growing faster than conventional machine tools due to increased research opportunities in social'"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "probs = torch.nn.functional.softmax(torch.tensor(scores),dim=1)[0].numpy()\n",
-    "probs"
+    "output = gpt2.generate(input_ids=input['input_ids'], attention_mask=input['attention_mask'], max_new_tokens=50, do_sample=True)\n",
+    "tokenizer.decode(output[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[comment]: <> \"LTeX: language=fr\"\n",
+    "### Beam search\n",
+    "Cette stratégie n'est pas la plus efficace. La séquence de n tokens la plus probable peut ne pas commencer par le token le plus probable :\n",
+    "\n",
+    "<img src=\"img/tokenization/tokenization.006.png\" width=\"600\">\n",
+    "\n",
+    "Le principe du **Beam search** est de générer en parallèle plusieurs séquences de tokens, de manière à produire, *in fine*, la plus probable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|!| -> 0.00000019\n",
-      "|\"| -> 0.00000214\n",
-      "|#| -> 0.00000003\n",
-      "|$| -> 0.00000002\n",
-      "|%| -> 0.00000003\n",
-      "|&| -> 0.00000002\n",
-      "|'| -> 0.00000045\n",
-      "|(| -> 0.00000056\n",
-      "|)| -> 0.00000301\n",
-      "|*| -> 0.00000035\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Artificial intelligence (AI) is an emerging field of research and development aimed at improving the quality of life for people living in the developing world.\\n\\nAI is an emerging field of research and development aimed at improving the quality of life for people living in the developing'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in range(10):\n",
-    "    print(f'|{tokenizer.decode(i)}| -> {probs[i]:.8f}')  "
+    "#num_beams : nombre de sequences paralleles maintenues\n",
+    "output = gpt2.generate(input_ids=input['input_ids'], attention_mask=input['attention_mask'], max_new_tokens=50, num_beams = 5)\n",
+    "tokenizer.decode(output[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Artificial intelligence (AI) has been largely replaced by machine learning technology that could eventually replace our eyes (although this is far from certain).\\n\\nIn 2015, machine learning was introduced to help us predict a lot of things and the number of people who have that'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = gpt2.generate(input_ids=input['input_ids'], attention_mask=input['attention_mask'], max_new_tokens=50, do_sample=True)\n",
+    "tokenizer.decode(output[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Artificial intelligence (AI) is a new field combining traditional cognitive analytics (e.g., computer programs that use the algorithms we use to solve problems) and algorithms that are \"hardwired into the human brain\" (i.e., \"automated\",'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = gpt2.generate(input_ids=input['input_ids'], attention_mask=input['attention_mask'], max_new_tokens=50, do_sample=True, top_k=50)\n",
+    "tokenizer.decode(output[0])"
    ]
   },
   {
