--- a/gpt2.ipynb
+++ b/gpt2.ipynb
@@ -113,6 +113,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "il y a 50257 tokens dans le vocabulaire\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'il y a {gpt2.config.vocab_size} tokens dans le vocabulaire')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [
@@ -1825,7 +1842,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.1.-1"
   }
  },
  "nbformat": 4,
