--- a/gpt2.ipynb
+++ b/gpt2.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,16 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch.autograd.grad_mode.set_grad_enabled at 0x14ccbefd0>"
+       "<torch.autograd.grad_mode.set_grad_enabled at 0x16c88c750>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,16 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = 'openai-community/gpt2'"
+    "#model_name = 'openai-community/gpt2'\n",
+    "model_name = 'gpt2'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +68,7 @@
        "device(type='mps', index=0)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +140,7 @@
        "{'input_ids': tensor([[8001, 9542, 4430]], device='mps:0'), 'attention_mask': tensor([[1, 1, 1]], device='mps:0')}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +207,7 @@
        "tensor([[8001, 9542, 4430,  318]], device='mps:0')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +273,7 @@
        "'Artificial intelligence is a'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +301,7 @@
        "'Artificial intelligence is a new'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +322,7 @@
        "'Artificial intelligence is a new field'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +350,7 @@
        "'Artificial intelligence is a new field of research'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +390,7 @@
        "           -99.8503]], device='mps:0'),)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +489,7 @@
        "'Artificial intelligence is a new field of research that has been in the works for a while now. It is a field that has been in the works for a while now. It is a field that has been in the works for a while now. It is a'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,16 +510,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Artificial intelligence doesn't have its own system. But it's built into both software and information structures. What is clear is that artificial intelligence is a major breakthrough in its field. The number of applications that can be developed for the technology is growing.\\n\\nOne\""
+       "'Artificial intelligence. \"Why doesn\\'t it work?\" \"I\\'m too stupid to know how to do that.\" \"I\\'m not supposed to know how to do that.\" \"I\\'m not supposed to know.\" \"I don\\'t care. I\\'m too dumb'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +553,7 @@
        "'Artificial intelligence (AI) is an emerging field of research and development aimed at improving the quality of life for people living in the developing world.\\n\\nAI is an emerging field of research and development aimed at improving the quality of life for people living in the developing'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,16 +566,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Artificial intelligence has had a long time to come. The most recent version of artificial intelligence was found in 2009 that simulated the behavior of monkeys using computer chips rather than human brains. \"The computer technology you\\'ve seen to date is still a very, very small window'"
+       "'Artificial intelligence is not new, it has been around since the 20th century, but this latest model of artificial intelligence, dubbed Artificial Inferiority, is designed to do just the opposite. The algorithm uses smart tags to guide the algorithms to find their target'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,16 +587,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Artificial intelligence has the potential to make millions of new jobs available. Companies will need to be able to track potential employees who have taken jobs they can\\'t easily find.\\n\\n\"Once you\\'ve found, if a person in your company has a bad relationship with'"
+       "'Artificial intelligence\\n\\nIntelligent design is not to be confused with artificial intelligence. Because artificial intelligence is also an important part of everyday life, many people feel that their very existence is being questioned by robots and other artificial intelligence.\\n\\nIn fact, as humans'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +665,7 @@
        "(10, 768)"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,9 +677,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'PCA' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[29], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m pca \u001b[38;5;241m=\u001b[39m \u001b[43mPCA\u001b[49m(n_components\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m      2\u001b[0m coordinates \u001b[38;5;241m=\u001b[39m pca\u001b[38;5;241m.\u001b[39mfit_transform(embeddings)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'PCA' is not defined"
+     ]
+    }
+   ],
    "source": [
     "pca = PCA(n_components=2)\n",
     "coordinates = pca.fit_transform(embeddings)"
@@ -686,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1842,7 +1855,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
