--- a/gpt2.ipynb
+++ b/gpt2.ipynb
@@ -404,7 +404,7 @@
    "metadata": {},
    "source": [
     "[comment]: <> \"LTeX: language=fr\"\n",
-    "Ces scores sont transformés en probabilités via une fonction [softmax](https://stackoverflow.com/a/47763299/1731620) :\n",
+    "Ces scores (*logits*) sont transformés en probabilités via une fonction [softmax](https://stackoverflow.com/a/47763299/1731620) :\n",
     "\n",
     "$\\sigma(x_i)=\\frac{e^{x_i}}{\\sum{e^{x_j}}}$"
    ]
@@ -689,6 +689,17 @@
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
       "Cell \u001b[0;32mIn[29], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m pca \u001b[38;5;241m=\u001b[39m \u001b[43mPCA\u001b[49m(n_components\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m      2\u001b[0m coordinates \u001b[38;5;241m=\u001b[39m pca\u001b[38;5;241m.\u001b[39mfit_transform(embeddings)\n",
       "\u001b[0;31mNameError\u001b[0m: name 'PCA' is not defined"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
