--- a/gpt2.ipynb
+++ b/gpt2.ipynb
@@ -5,9 +5,15 @@
    "metadata": {},
    "source": [
     "[comment]: <> \"LTeX: language=fr\"\n",
-    "Ce notebook propose une vision de \"haut niveau\" du fonctionnement du modèle [GPT2](https://huggingface.co/openai-community/gpt2), c'est-à-dire en regardant les entrées et les sorties, mais sans rentrer dans le fonctionnement interne. \n",
+    "# <center> Formation IXXI - Grands modèles de langue </center>\n",
+    "## <center> Jean-Philippe Magué </center>\n",
     "\n",
-    "Il utilise la bibliothèque [transformers](https://huggingface.co/docs/transformers/en/index) de [HuggingFace](https://huggingface.co/)"
+    "![](img/logo_ixxi.png)\n",
+    "\n",
+    "Cette formation s'appuie sur deux notebooks. Ce premier propose une vision de \"haut niveau\" du fonctionnement du modèle [GPT2](https://huggingface.co/openai-community/gpt2), c'est-à-dire en regardant les entrées et les sorties, mais sans rentrer dans le fonctionnement interne. Le second entre dans les détails internes du modèle. \n",
+    "\n",
+    "\n",
+    "Ces notebooks utilisent la bibliothèque [transformers](https://huggingface.co/docs/transformers/en/index) de [HuggingFace](https://huggingface.co/)"
    ]
   },
   {
