--- a/gpt2_bas_niveau.ipynb
+++ b/gpt2_bas_niveau.ipynb
@@ -872,7 +872,7 @@
     "\n",
     "Essayons de regarder de plus près les états cachés (residual stream)\n",
     "\n",
-    "<img src=\"img/images/images.003.png\" width=\"200\">"
+    "<img src=\"https://raw.githubusercontent.com/jmague/formation_LLM_IXXI/master/img/images/images.003.png\" width=\"200\">"
    ]
   },
   {
@@ -915,7 +915,7 @@
     "##### Scores et probabilités associés au dernier token, sur la dernière couche :\n",
     "Cela revient à refaire ce que l'on a fait dans le premier notebook, sauf qu'au lieu de récupérer directement les scores, on va récupérer le dernier état caché et faire l'unembedding manuellement :\n",
     "\n",
-    "<img src=\"img/images/images.004.png\" width=\"200\">"
+    "<img src=\"https://raw.githubusercontent.com/jmague/formation_LLM_IXXI/master/img/images/images.004.png\" width=\"200\">"
    ]
   },
   {
@@ -1022,7 +1022,7 @@
     "##### Que ce se passe-t-il si l'on fait l'unembedding juste avant la dernière couche ?\n",
     "Se pourrait-il que l'avant-dernier état caché commporte déjà suffisament d'information pour prédire le prochain token ? \n",
     "\n",
-    "<img src=\"img/images/images.005.png\" width=\"200\">"
+    "<img src=\"https://raw.githubusercontent.com/jmague/formation_LLM_IXXI/master/img/images/images.005.png\" width=\"200\">"
    ]
   },
   {
@@ -1089,7 +1089,7 @@
     "##### Que ce se passe-t-il si l'on fait l'unembedding à partir sur le premier état caché ?\n",
     "Aucune chance qu'il prédise le prochain token, puisqu'aucun traitement n'a encore été fait... \n",
     "\n",
-    "<img src=\"img/images/images.006.png\" width=\"200\">"
+    "<img src=\"https://raw.githubusercontent.com/jmague/formation_LLM_IXXI/master/img/images/images.006.png\" width=\"200\">"
    ]
   },
   {
