--- a/gpt2_haut_niveau.ipynb
+++ b/gpt2_haut_niveau.ipynb
@@ -482,7 +482,8 @@
     "[Différentes stratégies sont possibles](https://huggingface.co/blog/how-to-generate) pour générer le prochain token. La stratégie par défaut employée ici, **greedy search**, consiste tout simplement à choisir à chaque étape le token ayant la plus grande probabilité :\n",
     "\n",
     "\n",
-    "<img src=\"img/images/images.001.png\" width=\"600\">\n",
+    "<img src=\"https://raw.githubusercontent.com/jmague/formation_LLM_IXXI/master/img/images/images.001.png\" width=\"600\">\n",
+    "\n",
     "\n",
     "Elle atteint assez vite ses limites : "
    ]
@@ -546,7 +547,7 @@
     "### Beam search\n",
     "Cette stratégie n'est pas la plus efficace. La séquence de n tokens la plus probable peut ne pas commencer par le token le plus probable :\n",
     "\n",
-    "<img src=\"img/images/images.002.png\" width=\"600\">\n",
+    "<img src=\"https://raw.githubusercontent.com/jmague/formation_LLM_IXXI/master/img/images/images.002.png\" width=\"600\">\n",
     "\n",
     "Le principe du **Beam search** est de générer en parallèle plusieurs séquences de tokens, de manière à produire, *in fine*, la plus probable"
    ]
