--- a/gpt2_haut_niveau.ipynb
+++ b/gpt2_haut_niveau.ipynb
@@ -35,6 +35,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "  import google.colab\n",
+    "  import subprocess\n",
+    "  import sys\n",
+    "\n",
+    "  def install(package):\n",
+    "      subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", package])\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
