--- a/gpt2_haut_niveau.ipynb
+++ b/gpt2_haut_niveau.ipynb
@@ -46,7 +46,9 @@
     "\n",
     "  def install(package):\n",
     "      subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", package])\n",
-    "  "
+    "  install('accelerate')\n",
+    "except:\n",
+    "  pass"
    ]
   },
   {
