--- a/gpt2_bas_niveau.ipynb
+++ b/gpt2_bas_niveau.ipynb
@@ -22,6 +22,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "  import google.colab\n",
+    "  import subprocess\n",
+    "  import sys\n",
+    "\n",
+    "  def install(package):\n",
+    "      subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", package])\n",
+    "  install('accelerate')\n",
+    "  install('bertviz')\n",
+    "except:\n",
+    "  pass"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
